--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "zadanie-rekrutacyjne",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "index.html",
+  "browserslist": "cover 99.5%",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel",
     "build": "parcel build"
   },
   "author": "Pawel Switalski",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "parcel": "^2.0.0-rc.0"
   }
 }
