--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Pawel Switalski",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-image": "^2.0.0-rc.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
     "parcel": "^2.0.0-rc.0"
   }
